fixed layout bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,7 @@ body {
 .ql-editor {
   background-color: white;
 }
+
+.cl-internal-b3fm6y {
+  display: none;
+}
